--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                 <span class="icon-bar"></span>
                               </button>
                                   <a class="navbar-brand" href="#">
-                                    <img src="logo.png" alt="Logo">
+                                    <img src="images/photo/logo.png" alt="Logo">
                                   </a>
 
                             </div>
