--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                         <ul>
                             <li class="wow fadeInLeft" data-wow-duration="300ms" data-wow-delay="300ms">
                                 <div class="blog-img">
-                                    <img src="/bacon.jpeg" alt="blog-img">
+                                    <img src="images/photo/bacon.jpeg" alt="blog-img">
                                 </div>
                                 <div class="content-right">
                                     <h3>Bacon and Bread</h3>
