--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <video preload="auto" autoplay loop muted class="video-background">
                                 <source type="video/ogv" src="videos/main.ogv" />
                 <source type="video/webm" src="videos/main.webm" />
-<!--                <source type="video/mp4" src="videos/main.mp4" />-->
+                <source type="video/mp4" src="videos/main.mp4" />
 
             </video>
         </div>
